--- a/public/index.html
+++ b/public/index.html
@@ -436,7 +436,7 @@
             <!-- Grid Area -->
             <div class="grid grid-cols-6 gap-10">
                 <!-- item 1 -->
-                <div class="col-span-6 border lg:col-span-6 md:col-span-3 border-last">
+                <div class=" border col-span-6 md:col-span-3 border-last">
                     <!-- item 1 header -->
                     <div class="border-b border-last p-4 flex items-center justify-between">
                         <h3>
@@ -447,20 +447,19 @@
                     <!-- item 1 parag -->
                     <p class="p-4 text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, impedit?
                         Est quos eveniet expedita labore. Lorem ipsum dolor sit amet.</p>
-                        
-                        <!-- item1 footer -->
-                        <div class="flex justify-end border-t items-center border-last space-x-4 font-bold text-xs">
-                            <p>ON DEC 17, 2023</p>
-                            <div class="flex items-center justify-center space-x-1">
-                                <i class="fa-regular fa-comment"></i>
-                                <p>12</p>
-                                <i class="fa-regular fa-heart"></i>
-                                <p>9</p>
-                            </div>
+
+                    <!-- item1 footer -->
+                    <div class="flex justify-end border-t items-center border-last space-x-4 font-bold text-xs">
+                        <p>ON DEC 17, 2023</p>
+                        <div class="flex items-center justify-center space-x-1">
+                            <i class="fa-regular fa-comment"></i>
+                            <p>12</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>9</p>
                         </div>
                     </div>
-                    <div class="hidden lg:block">
-                <div class="md:col-span-3  lg:col-span-6 border border-last">
+                </div>
+                <div class="md:col-span-3  col-span-6 border border-last">
                     <!-- item 2 header -->
                     <div class="border-b border-last p-4 flex items-center justify-between">
                         <h3>
@@ -483,7 +482,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="lg:col-span-2 md:col-span-3 border border-last">
+                <div class="lg:col-span-2 hidden lg:block md:col-span-3 border border-last">
                     <!-- item 3  header -->
                     <div class="border-b border-last p-4 flex items-center justify-between">
                         <h3>
@@ -494,29 +493,29 @@
                     <!-- item 3 parag -->
                     <p class="p-4 text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, impedit?
                         Est quos eveniet expedita labore. Lorem ipsum dolor sit amet.</p>
-                        
-                        <!-- item 3 footer -->
-                        <div class="flex justify-end border-t items-center border-last space-x-4 font-bold text-xs">
-                            <p>ON DEC 17, 2023</p>
-                            <div class="flex items-center justify-center space-x-1">
-                                <i class="fa-regular fa-comment"></i>
-                                <p>12</p>
-                                <i class="fa-regular fa-heart"></i>
-                                <p>9</p>
-                            </div>
+
+                    <!-- item 3 footer -->
+                    <div class="flex justify-end border-t items-center border-last space-x-4 font-bold text-xs">
+                        <p>ON DEC 17, 2023</p>
+                        <div class="flex items-center justify-center space-x-1">
+                            <i class="fa-regular fa-comment"></i>
+                            <p>12</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <p>9</p>
                         </div>
                     </div>
-                    <div class="lg:col-span-2 col-span-3 border border-last">
-                        <!-- item 4  header -->
-                        <div class="border-b border-last p-4 flex items-center justify-between">
-                            <h3>
-                                Lorem ipsum dolor sit.
-                            </h3>
-                            <img src="./images/userava4.jpg" class="rounded-full" alt="">
-                        </div>
-                        <!-- item 4 parag -->
-                        <p class="p-4 text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, impedit?
-                            Est quos eveniet expedita labore. Lorem ipsum dolor sit amet.</p>
+                </div>
+                <div class="lg:col-span-2 hidden lg:block col-span-3 border border-last">
+                    <!-- item 4  header -->
+                    <div class="border-b border-last p-4 flex items-center justify-between">
+                        <h3>
+                            Lorem ipsum dolor sit.
+                        </h3>
+                        <img src="./images/userava4.jpg" class="rounded-full" alt="">
+                    </div>
+                    <!-- item 4 parag -->
+                    <p class="p-4 text-sm">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat, impedit?
+                        Est quos eveniet expedita labore. Lorem ipsum dolor sit amet.</p>
 
                     <!-- item 4 footer -->
                     <div class="flex justify-end border-t items-center border-last space-x-4 font-bold text-xs">
@@ -552,7 +551,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+
             </div>
         </div>
     </section>
@@ -560,7 +559,7 @@
     <!-- Footer Section -->
         <footer class="bg-black pt-8 pb-8 text-third ">
             <!-- Footer Container -->
-            <div class="container flex pl-5 lg:pl-0 pb-8">
+            <div class="container flex l-5 lg:pl-0 pb-8">
                 <!-- left -->
                 <div class="basis-1/2 lg:basis-1/3">
                     <a href=""
